Fixing faint background behind character downloader button

--- a/SillyTavern/public/scripts/extensions/streamlined-ui/style.css
+++ b/SillyTavern/public/scripts/extensions/streamlined-ui/style.css
@@ -60,6 +60,7 @@
     border: none;
     opacity: 0.3;
     font-size: 180%;
+    background: none;
 }
 #wt-char-menu-btn:hover
 {
